[gd_scene load_steps=2 format=3 uid="uid://bydd03jmmpkr4"]

[ext_resource type="Script" uid="uid://oblj0153qmtj" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.392157)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsVBox" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -145.0
offset_right = 235.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="MenuContainer/ButtonsVBox"]
layout_mode = 2
size_flags_vertical = 4
text = "Continue"

[node name="RestartButton" type="Button" parent="MenuContainer/ButtonsVBox"]
layout_mode = 2
size_flags_vertical = 4
text = "Restart"

[node name="MainMenuButton" type="Button" parent="MenuContainer/ButtonsVBox"]
layout_mode = 2
size_flags_vertical = 4
text = "Main Menu"
